[gd_scene load_steps=5 format=3 uid="uid://dwme10roo04vh"]

[ext_resource type="Script" path="res://src/nodes/text.gd" id="1_68rf3"]
[ext_resource type="Texture2D" uid="uid://bp7kjvywgc1yo" path="res://assets/icons/triangle.png" id="1_estna"]
[ext_resource type="PackedScene" uid="uid://clpd6j7qnvl3t" path="res://src/graph_double_click_detect.tscn" id="2_fhh1j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i0jtj"]
bg_color = Color(0.6, 0.6, 0.6, 0)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color(0.8, 0.8, 0.8, 0.34902)
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Text" type="GraphElement"]
custom_minimum_size = Vector2(150, 80)
offset_right = 151.0
offset_bottom = 80.0
resizable = true
script = ExtResource("1_68rf3")

[node name="GraphDoubleClickDetect" parent="." instance=ExtResource("2_fhh1j")]

[node name="ResizeIcon" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.490196)
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
texture = ExtResource("1_estna")
expand_mode = 5

[node name="BorderPanel" type="Panel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_i0jtj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="TextEdit" type="TextEdit" parent="MarginContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_font_sizes/font_size = 16
text = "Example text..."
placeholder_text = "Example text..."
wrap_mode = 1
autowrap_mode = 2
caret_blink = true

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "Example text..."
autowrap_mode = 2

[connection signal="dragged" from="." to="." method="_on_dragged"]
[connection signal="node_deselected" from="." to="." method="_on_node_deselected"]
[connection signal="node_selected" from="." to="." method="_on_node_selected"]
[connection signal="raise_request" from="." to="GraphDoubleClickDetect" method="_on_raise"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="double_clicked" from="GraphDoubleClickDetect" to="." method="_on_graph_double_click_detect_double_clicked"]
[connection signal="text_changed" from="MarginContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
